<resources>
    <string name="app_name">Playlist maker</string>
    <string name="search">Поиск</string>
    <string name="library">Медиатека</string>
    <string name="settings">Настройки</string>
    <string name="dark_theme">Темная тема</string>
    <string name="share_the_app">Поделиться приложением</string>
    <string name="write_to_support">Написать в поддержку</string>
    <string name="user_agreement">Пользовательское соглашение</string>
    <string name="support_message">Спасибо разработчикам и разработчицам за крутое приложение.</string>
    <string name="support_subject">Сообщение разработчикам и разработчицам приложения Playlist Maker</string>
    <string name="support_email">kokoreko@ya.ru</string>
    <string name="nothing_was_found">Ничего не нашлось</string>
    <string name="connection_problems">Проблемы со связью \n\nЗагрузка не удалась. Проверьте подключение к интернету</string>
    <string name="search_update">Обновить</string>
    <string name="agreement_url">https://yandex.ru/legal/practicum_offer/</string>
    <string name="androidDeveloper_url">https://practicum.yandex.ru/android-developer/</string>
    <string name="looking_for">История поиска</string>
    <string name="clear_the_history">Очистить историю</string>
</resources>