<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/playlist_background">

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="56dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="start"
            android:paddingLeft="16dp"
            android:paddingTop="14dp"
            android:text="@string/app_name"
            android:textColor="@color/white"
            android:textSize="22sp" />

    </FrameLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="16dp">

        <Button
            android:id="@+id/button_search"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:backgroundTint="@color/white"
            android:text="@string/search"
            android:textAllCaps="false"
            android:textColor="@color/black"
            android:textSize="22sp"
            app:cornerRadius="15dp"
            app:icon="@drawable/vector_search"
            app:iconGravity="textStart"
            app:iconPadding="8dp"
            app:iconTint="@color/black" />

        <Button
            android:id="@+id/button_library"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:backgroundTint="@color/white"
            android:text="@string/library"
            android:textAllCaps="false"
            android:textColor="@color/black"
            android:textSize="22sp"
            app:cornerRadius="16dp"
            app:icon="@drawable/vector_library"
            app:iconGravity="textStart"
            app:iconPadding="8dp"
            app:iconTint="@color/black" />

        <Button
            android:id="@+id/button_settings"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:backgroundTint="@color/white"
            android:text="@string/settings"
            android:textAllCaps="false"
            android:textColor="@color/black"
            android:textSize="22sp"
            app:cornerRadius="16dp"
            app:icon="@drawable/vector_settings"
            app:iconGravity="textStart"
            app:iconPadding="8dp"
            app:iconTint="@color/black" />

    </LinearLayout>

</LinearLayout>